# repofair

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANAGEMENT_PLAN.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
checks/: readme.py
repofair/: cli.py  scorer.py
repofair/checks/: __init__.py  ci.py  citation.py  commit_activity.py  contributing.py  environment.py  license.py  readme.py  version.py
tests/: test_checks.py
